# coicop_classification

./: .gitignore  LICENSE  README.md  coicop1999_classification_grid copy.ipynb  coicop1999_classification_grid_v1.ipynb  coicop2018_classification_grid.ipynb  coicop2018_classification_grid_v1.ipynb  coicop2018_classification_grid_v2.ipynb  coicop2018_classification_grid_watsonx_v1.ipynb  ecoicop_classification_grid.ipynb  ecoicopv1_classification_grid_v1.ipynb  ecoicopv1_classification_grid_watsonx_v1.ipynb  example.env  pyproject.toml  rac_coicop2018.ipynb  rag_comparison.ipynb
analysis/: missed_retrieval.csv  missed_retrieval_2025-03-16_17-43-08.csv  top_missed_retrieval_rac.csv
coicop_1999/: coicop1999_en.csv  coicop1999_es.csv  coicop1999_fr.csv
coicop_2018/: COICOP_2018_English_structure.xlsx  COICOP_2018_English_structure_edited.xlsx
ecoicop_v1/: ECOICOP-HICP_Structure_Labels.tsv
results/: coicop1999_llama-3.3-70b-versatile_2025-02-10_151827.csv  coicop1999_mistral-large-latest_2025-02-10_142323.csv  coicop2018_gemini-2.0-flash-lite-preview-02-05_2025-02-21_175648.csv  coicop2018_gemini-2.0-flash-lite-preview-02-05_2025-02-21_205911.csv  coicop2018_gemini-2.0-flash-lite-preview-02-05_2025-02-23_210343.csv  coicop2018_granite-3-8b-instruct_2025-02-23_184318.csv  coicop2018_llama-3-3-70b-instruct_2025-02-23_161241.csv  coicop2018_llama3-70b-8192_2025-02-10_180526.csv  coicop2018_llama3-70b-8192_2025-02-21_165642.csv  coicop2018_llama3-70b-8192_2025-02-23_180256.csv  coicop2018_mistral-large-latest_2025-02-10_165502.csv  consolidated_coicop2018_20250210.csv  (+31 more)
