[project]
name = "coicop-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "nest-asyncio>=1.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic-ai-slim[groq,mistral,openai]>=0.0.21",
    "python-dotenv>=1.0.1",
]
