[project]
name = "coicop-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.3.0",
    "fastembed>=0.5.1",
    "ftfy>=6.3.1",
    "huggingface-hub>=0.28.1",
    "jupyter>=1.1.1",
    "llama-cpp-python>=0.3.7",
    "nest-asyncio>=1.6.0",
    "openai>=1.61.0",
    "openpyxl>=3.1.5",
    "outlines>=0.1.14",
    "pandas>=2.2.3",
    "pydantic-ai-slim[groq,mistral,openai]>=0.0.21",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.13.2",
    "sentence-transformers>=3.4.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.48.3",
    "unidecode>=1.3.8",
]
